# synthetic-csm-pipeline

./: .gitignore  check_podcast_scripts.py  rename_wavs.py  validate_file_names_of_wavs.py
dataset/: inspect_diarization.py  inspect_parakeet.py  inspect_parakeet_class.py  process_podcast.py  pyproject.toml  test_lang.py
prep_for_training/: README.md  create_dummy_data.py  create_dummy_data_train.py  prepare_dataset_for_training.py  pyproject.toml  verify_shard.py
prep_for_training/example_reference/: Kopie_von_Sesame_CSM_(1B)_TTS.ipynb
train_csm/: .env.example  README.md  generation.py  inference.py  main.py  preprocess_dataset.py  pyproject.toml  train.py  verify_dataset_loading.py
train_csm/configs/: finetune_param_defaults.yaml  finetune_param_defaults_bs4.yaml  finetune_param_defaults_lower_vram.yaml
train_csm/example_gen/segments/: script.txt
