[project]
name = "synthetic-csm-pipeline"
version = "0.1.0"
description = "Pipeline for preparing synthetic conversational datasets for Sesame CSM training"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "transformers>=4.48.0",
    "datasets>=3.2.0",
    "soundfile>=0.12.1",
    "librosa>=0.10.1",
    "tqdm>=4.66.1",
    "numpy>=1.26.0",
    "torch>=2.1.0",
    "accelerate>=0.26.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
]

[tool.uv.workspace]
members = ["train_csm"]
