[project]
name = "train-csm"
version = "0.1.0"
description = "Training script for Sesame CSM using Unsloth"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "unsloth",
    "transformers>=4.48.0",
    "datasets==4.3.0",
    "torch>=2.1.0",
    "accelerate>=0.26.0",
    "scipy",
    "soundfile",
    "librosa",
    "wandb",
    "python-dotenv",
    "PyYAML",
    "bitsandbytes>=0.48.2",
    "torchvision>=0.23.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
]
