[project]
name = "train-csm"
version = "0.1.0"
description = "Training script for Sesame CSM using Unsloth"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "unsloth",
    "transformers==4.52.3",
    "datasets==4.3.0",
    "torch>=2.1.0",
    "accelerate>=0.26.0",
    "scipy",
    "soundfile",
    "librosa",
    "wandb",
    "python-dotenv",
    "PyYAML",
    "bitsandbytes>=0.48.2",
    "torchvision>=0.23.0",
    "safetensors>=0.4.0",
    "tqdm",
    "trl==0.22.2",
]

[tool.uv]
override-dependencies = [
    "transformers==4.52.3",
    "trl==0.22.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
